--- a/estilos/reg.css
+++ b/estilos/reg.css
@@ -1,1 +1,9 @@
-body	{background-color:#00B0FF}
+body	{background-color:white}
+table	{border-spacing:15px}
+#container { width: 700px; height: 500px; background-color: #74CCF5; position: absolute; left: 500px; top: 100px; border: 1px solid black;    border-radius: 20px;}
+
+@media only screen and (min-width : 320px) and (max-width : 767px) and (orientation : portrait){
+	input{ height: 50px; width: 280px; font-size: 33px;}
+	#container{	    background-color: #74CCF5; position: absolute; left: 0; top: 100px; border: 1px solid black; font-size: 49px;}
+}
+	
