--- a/estilos/reg.css
+++ b/estilos/reg.css
@@ -4,6 +4,6 @@ table	{border-spacing:15px}
 
 @media only screen and (min-width : 320px) and (max-width : 767px) and (orientation : portrait){
 	input{ height: 50px; width: 280px; font-size: 33px;}
-	#container{	    background-color: #74CCF5; position: absolute; left: 0; top: 100px; border: 1px solid black; font-size: 49px;}
+	#container{	 width:100%; height:100%; background-color: #74CCF5; position: absolute; left: 0; top: 100px; border: 1px solid black; font-size: 49px;}
 }
 	
