--- a/estilos/reg.css
+++ b/estilos/reg.css
@@ -3,7 +3,21 @@ table	{border-spacing:15px}
 #container { width: 700px; height: 500px; background-color: #74CCF5; position: absolute; left: 500px; top: 100px; border: 1px solid black;    border-radius: 20px;}
 
 @media only screen and (min-width : 320px) and (max-width : 767px) and (orientation : portrait){
-	input{ height: 50px; width: 280px; font-size: 33px;}
-	#container{	 width:100%; height:100%; background-color: #74CCF5; position: absolute; left: 0; top: 100px; border: 1px solid black; font-size: 49px;}
+	nput {
+    height: auto;
+    width: auto;
+    font-size: 12px;
+	}
+	#container {
+    width: 100%;
+    height: 100%;
+    background-color: #74CCF5;
+    position: absolute;
+    left: 0;
+    top: 100px;
+    border: 1px solid black;
+    font-size: 12px;
+    border-radius: 0px;
+	}
 }
 	
